# kaggle-template

./: .gitignore  README.md  pyproject.toml
scripts/: push_to_kaggle.py
templates/: kernel-metadata.inference.template.json  kernel-metadata.train.template.json
